重命名qwen相关

--- a/docs/tasks/对齐原三项目_缺失功能任务清单.md
+++ b/docs/tasks/对齐原三项目_缺失功能任务清单.md
@@ -18,7 +18,7 @@
 - [ ] 调用栈展示增强：当存在 js-injection / crawler / hook 的调用栈时，在 RequestRecorder 中提供可折叠展示、脚本定位（文件名/行列/片段）。
 - [x] 大包/二进制体验补齐：当 body/response 为 artifact 引用时，提供“下载/预览(hex/文本)”入口（当前仅显示字符串，artifact 看不到）。
 
-### AI/命令系统（若要对齐 qwen-code Web/CLI 能力）
+### AI/命令系统（若要对齐 AI CLI Web/CLI 能力）
 - [ ] 增加“AI 工作区”页面入口（路由 + 侧边栏/首页快捷入口），整合：`CommandInput`、会话统计、`SessionCompression`、`InteractiveFileTree`、`ProjectInitializer` 等（当前组件存在但无入口/不在路由中）。
 - [ ] 命令结果消费：根据 `/api/v1/commands/execute` 返回的 `data.action` 真正打开对应面板/执行对应流程（目前后端多为 `open_*`，前端缺少落地动作链路）。
 - [ ] MCP/Agents 交互闭环：提供 MCP server 管理、tool 执行结果入会话；提供 Agent 列表/切换/创建并与当前会话绑定（当前缺少可用入口与完整闭环）。
@@ -37,7 +37,7 @@
 - [ ] 实现真实的 Qwen OAuth：`token exchange / userinfo / refresh / revoke`（`AuthService` 当前为模拟；当配置 `QWEN_CLIENT_ID` 等信息时应走真实 API）。
 - [ ] 增加 OAuth 配置自检：redirect_uri 不匹配、client_secret 缺失、网络失败等给出可执行提示（避免静默走 mock 导致“看似成功但不可用”）。
 
-### 命令系统 / MCP / Agents（若要对齐 qwen-code 能力）
+### 命令系统 / MCP / Agents（若要对齐 AI CLI 能力）
 - [ ] `CommandService`：补齐 `/mcp /agents /directory /init /settings` 等命令的真实后端逻辑（目前多为仅返回 `open_*` 的占位动作）。
 - [ ] 增加 MCP API：`/api/v1/mcp/*`（connect/list tools/execute），并实现安全的工具调用（白名单/沙箱/资源访问边界）。
 - [ ] 增加 Agents API：`/api/v1/agents/*`（list/switch/create/info），支持持久化与会话绑定。
